Working second page

--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -33,7 +33,7 @@
 
         </GridLayout>
     </StackLayout>
-    <Button colspan="3" row="2" text="START" class="section startBtn" verticalAlignment="center"></Button>
+    <Button colspan="3" row="2" text="START" class="section startBtn" [nsRouterLink]="['/timer']" verticalAlignment="center"></Button>
     <!--<Label row="2" colSpan="3" text="START" class="section" horizontalAlignment="center" verticalAlignment="center"></Label>-->
     
     <!--<Label row="0" colSpan="3" text="WORK" class="section workRest" horizontalAlignment="center" verticalAlignment="center"></Label>-->
