--- a/app/item/item-detail.component.html
+++ b/app/item/item-detail.component.html
@@ -1,8 +1,13 @@
-<ActionBar title="Details" class="action-bar"></ActionBar>
-<FlexboxLayout flexDirection="column" class="page">
+<!--<ActionBar title="Details" class="action-bar"></ActionBar>-->
+<StackLayout class="wrapper">
+    <Label text="WORK" class="workRest"></Label>
+    <Label [text]="timer.work"></Label>
+</StackLayout>
+<!--<FlexboxLayout flexDirection="column" class="page">
     <FlexboxLayout class="m-15">
+        <Label class="h2" text="Hello"></Label>
         <Label class="h2" [text]="item.id + '. '"></Label>
         <Label class="h2" [text]="item.name"></Label>
     </FlexboxLayout>
     <Label class="h4" [text]="item.role"></Label>
-</FlexboxLayout>
+</FlexboxLayout>-->
